// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWSEBSVolumeProvider where there is a volume creates table 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "annotations": {
                "amazonaws.com/ebs-volume-id": "volume1",
                "backstage.io/managed-by-location": "aws-ebs-volume-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-ebs-volume-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://eu-west-1.console.aws.amazon.com/ec2/home?region=eu-west-1#VolumeDetails:volumeId=volume1",
              },
              "attachedInstanceIds": "",
              "availabilityZone": "eu-west-1",
              "createTime": "2025-07-15T15:18:12.000Z",
              "encrypted": "Yes",
              "labels": {
                "something": "something--something",
              },
              "name": "volume1",
              "size": 128,
              "state": "available",
              "title": "volume1",
              "volumeType": "gp3",
            },
            "spec": {
              "owner": "unknown",
              "type": "ebs-volume",
            },
          },
          "locationKey": "aws-ebs-volume-provider-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;

exports[`AWSEBSVolumeProvider where there is a volume creates table with a template 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "annotations": {
                "amazonaws.com/ebs-volume-id": "volume1",
                "backstage.io/managed-by-location": "aws-ebs-volume-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-ebs-volume-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://eu-west-1.console.aws.amazon.com/ec2/home?region=eu-west-1#VolumeDetails:volumeId=volume1",
              },
              "labels": {
                "something": "something--something",
              },
              "name": "volume1",
              "title": "volume1",
            },
            "spec": {
              "owner": "hardcoded-unknown",
              "type": "ebs-volume",
            },
          },
          "locationKey": "aws-ebs-volume-provider-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;
